// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "sqlite"
}

model MonthBudget {
  id     String @id
  label  String
  income Int

  categories    Category[]
  transactions  Transaction[]
  purchaseItems PurchaseItem[]
  incomeSources IncomeSource[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model IncomeSource {
  id      String @id @default(cuid())
  monthId String
  name    String
  amount  Int
  order   Int    @default(0)

  month MonthBudget @relation(fields: [monthId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([monthId])
  @@index([monthId, order])
}

model Category {
  id         String  @id @default(cuid())
  monthId    String
  name       String
  type       String
  budget     Int
  locked     Boolean @default(false)
  isFallback Boolean @default(false)
  order      Int     @default(0)

  month        MonthBudget   @relation(fields: [monthId], references: [id], onDelete: Cascade)
  transactions Transaction[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([monthId])
  @@index([monthId, order])
}

model Transaction {
  id         String   @id @default(cuid())
  monthId    String
  categoryId String
  text       String
  amount     Int
  createdAt  DateTime @default(now())

  month    MonthBudget @relation(fields: [monthId], references: [id], onDelete: Cascade)
  category Category    @relation(fields: [categoryId], references: [id], onDelete: Restrict)

  @@index([monthId])
  @@index([categoryId])
}

model PurchaseItem {
  id      String @id @default(cuid())
  monthId String
  name    String
  price   Int?
  status  String @default("Pending")

  month MonthBudget @relation(fields: [monthId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([monthId])
}

model LegacyMigration {
  id           String    @id @default("singleton")
  status       String    @default("Pending")
  startedAt    DateTime?
  completedAt  DateTime?
  errorMessage String?

  updatedAt DateTime @updatedAt
}

// Preference điều hướng (US-025): thứ tự + ẩn/hiện từng mục sidebar. `id` là khoá
// ổn định do app đặt — "group:<groupId>" cho nhóm cha, "leaf:<href>" cho section con
// (xem lib/nav-registry.ts). Nội dung menu (label/icon/route) vẫn nằm trong code.
model NavPref {
  id     String  @id
  order  Int     @default(0)
  hidden Boolean @default(false)

  updatedAt DateTime @updatedAt

  @@index([order])
}

// Roadmap timeline có thể sửa qua Config Panel (US-025 GĐ3). `dateRange` giữ format
// chuỗi "DD/MM-DD/MM" như bản hardcode cũ, validate ở tầng ứng dụng (không CHECK).
model RoadmapPhase {
  id        String @id @default(cuid())
  order     Int    @default(0)
  dateRange String
  label     String
  title     String
  desc      String

  deliverables RoadmapDeliverable[]

  updatedAt DateTime @updatedAt

  @@index([order])
}

model RoadmapDeliverable {
  id      String @id @default(cuid())
  phaseId String
  order   Int    @default(0)
  title   String
  desc    String

  phase RoadmapPhase @relation(fields: [phaseId], references: [id], onDelete: Cascade)

  @@index([phaseId, order])
}

// Bảng lịch tuần (Config Panel US-025 GĐ3). Mỗi dòng = 1 khung giờ + 7 ô ngày.
model TimetableRow {
  id        String @id @default(cuid())
  order     Int    @default(0)
  timeLabel String
  mon       String
  tue       String
  wed       String
  thu       String
  fri       String
  sat       String
  sun       String

  updatedAt DateTime @updatedAt

  @@index([order])
}

// Nội dung tĩnh của các trang Roadmap/Freelance/Sản phẩm, sửa được qua nút "Chỉnh
// sửa trang" mà không cần đổi code (US-027) — layout/JSX giữ nguyên, chỉ đổi dữ
// liệu hiển thị. `page` là khoá ổn định do app đặt (route rút gọn, vd
// "roadmap/priorities"). Nội dung mặc định nằm ở `lib/page-content-defaults.ts`.
//
// PageText: từng trường text đơn lẻ đặt tên theo `key` (tiêu đề Card, mô tả, số
// liệu lớn...). PageBlock: danh sách item lặp lại (thẻ ưu tiên, mục tiêu, dịch
// vụ...); `section` phân nhóm khi 1 trang có nhiều danh sách khác nhau (vd trang
// Chiến lược Freelance có cả danh sách "nguyên tắc" và "gói dịch vụ"). `bullets`
// là mảng chuỗi JSON-encode cho item có gạch đầu dòng con (gói dịch vụ, mốc thời
// gian sản phẩm) — SQLite không có kiểu mảng gốc.
model PageText {
  id    String @id @default(cuid())
  page  String
  key   String
  value String

  updatedAt DateTime @updatedAt

  @@unique([page, key])
  @@index([page])
}

model PageBlock {
  id      String @id @default(cuid())
  page    String
  section String @default("default")
  order   Int    @default(0)

  badge   String?
  title   String?
  desc    String?
  value   String?
  weight  Int?
  variant String?
  bullets String?

  updatedAt DateTime @updatedAt

  @@index([page, section, order])
}

model JobPlatform {
  id   String @id @default(cuid())
  name String

  jobApplications JobApplication[]

  createdAt DateTime @default(now())
}

model JobApplication {
  id          String    @id @default(cuid())
  company     String
  deadline    DateTime?
  platformId  String
  link        String
  status      String    @default("Interested")
  note        String?
  submittedAt DateTime?
  owner       String    @default("me")

  platform JobPlatform @relation(fields: [platformId], references: [id], onDelete: Restrict)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([platformId])
  @@index([owner])
}
