// Đồng bộ thủ công từ prisma/schema.prisma — không có generator DBML cài sẵn trong dự án.
// Nguồn sự thật là prisma/schema.prisma. Không sửa ngược từ file này.
// Cập nhật lần cuối: 2026-09-13 (US-027 — thêm PageText / PageBlock cho nội dung sửa được của trang Roadmap/Freelance/Sản phẩm; trước đó US-025 GĐ3 thêm RoadmapPhase / RoadmapDeliverable / TimetableRow, GĐ2 thêm NavPref)

Table MonthBudget {
  id text [pk, note: 'Dạng YYYY-MM, client cung cấp']
  label text [not null]
  income integer [not null, note: 'VESTIGIAL sau US-022 — "Thu nhập tháng" nay tính bằng tổng IncomeSource.amount; cột này giữ lại chỉ để backfill migration 20260907005635_add_income_source và làm đường rollback (JDG-035). Không có đường ghi/đọc nào từ UI.']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
}

Table IncomeSource {
  id text [pk]
  monthId text [not null, ref: > MonthBudget.id]
  name text [not null, note: 'Tên nguồn thu (Lương, Freelance, Thưởng...) — cho phép trùng tên trong cùng tháng, khác Category (không áp BR-017)']
  amount integer [not null, note: 'Số nguyên đồng >= 0 — ràng buộc ở tầng ứng dụng (DEC-134), không phải CHECK constraint của DB']
  order integer [not null, default: 0, note: 'Vị trí hiển thị trong bảng "Nguồn thu" — Dylan kéo-thả sắp xếp (BR-035, AC-10)']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  note: 'Nguồn thu — "Thu nhập tháng" của MonthBudget = tổng amount các dòng của tháng (BR-033). Chỉ thêm/sửa/xóa/sắp xếp được ở tháng hiện tại hoặc tương lai theo đồng hồ hệ thống (BR-036, DEC-133). Không cộng vào / không đụng Ngân sách hay Chi thực tế của Category (DEC-127). Tháng tạo mới bắt đầu không có dòng nào (BR-037); các tháng có trước US-022 được backfill 1 dòng "Lương" = MonthBudget.income cũ.'

  indexes {
    monthId
    (monthId, order)
  }
}

Table Category {
  id text [pk]
  monthId text [not null, ref: > MonthBudget.id]
  name text [not null]
  type text [not null, note: 'Chỉ 1 trong 3 giá trị: "Cố định" | "Tích lũy" | "Khác" — ràng buộc ở tầng ứng dụng (BR-019, DEC-073), không phải CHECK constraint của DB']
  budget integer [not null]
  locked boolean [not null, default: false]
  isFallback boolean [not null, default: false, note: '"Chi tiêu khác" khi true — khóa hoàn toàn, không cho sửa tên/loại/ngân sách (DEC-027, DEC-058)']
  order integer [not null, default: 0, note: 'Vị trí hiển thị trong bảng danh mục — Dylan tự sắp xếp bằng kéo thả (US-017, BR-020). "Chi tiêu khác" (isFallback=true) vẫn có giá trị order như dòng khác nhưng tầng ứng dụng luôn hiển thị nó ở cuối bất kể giá trị này (BR-016), không phải CHECK constraint của DB']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  note: 'Chi thực tế không lưu ở đây — tính bằng aggregate trên Transaction (DEC-007)'

  indexes {
    (monthId, order)
  }
}

Table Transaction {
  id text [pk]
  monthId text [not null, ref: > MonthBudget.id]
  categoryId text [not null, ref: > Category.id]
  text text [not null]
  amount integer [not null]
  createdAt timestamp [not null]
}

Table PurchaseItem {
  id text [pk]
  monthId text [not null, ref: > MonthBudget.id]
  name text [not null]
  price integer [note: 'Giá tham khảo, không bắt buộc — không cộng vào Ngân sách/Chi thực tế của MonthBudget (BR-022)']
  status text [not null, default: 'Pending', note: 'Chỉ 1 trong 2 giá trị: Pending | Purchased — ràng buộc ở tầng ứng dụng, không phải CHECK constraint của DB (BR-024)']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  note: 'Item cần mua — độc lập với Category/Transaction (BR-022); chỉ tháng hiện tại theo đồng hồ hệ thống mới ghi được (BR-024, DEC-107)'

  indexes {
    monthId
  }
}

Table LegacyMigration {
  id text [pk, note: 'Cố định "singleton" — single-user (DEC-004)']
  status text [not null, default: 'Pending', note: 'Pending | InProgress | Completed | Failed']
  startedAt timestamp
  completedAt timestamp
  errorMessage text

  updatedAt timestamp [not null]
}

Table NavPref {
  id text [pk, note: 'Khoá do app đặt: "group:<groupId>" cho nhóm cha, "leaf:<href>" cho section con (lib/nav-registry.ts). Nội dung menu (label/icon/route) vẫn ở code (US-025)']
  order integer [not null, default: 0, note: 'Vị trí trong CÙNG cấp anh em; reorder ghi order = index của mảng gửi lên (mẫu Category.reorder)']
  hidden boolean [not null, default: false, note: 'Ẩn khỏi sidebar — KHÔNG chặn route, truy cập trực tiếp vẫn được']
  updatedAt timestamp [not null]

  note: 'Bộ mặc định (6 nhóm + các section con, order theo thứ tự trong nav.ts) được tạo lười bởi tầng ứng dụng khi bảng rỗng, không phải seed migration. Độc lập mọi bảng khác.'

  indexes {
    order
  }
}

Table RoadmapPhase {
  id text [pk]
  order integer [not null, default: 0]
  dateRange text [not null, note: 'Dạng "DD/MM-DD/MM" (năm cố định 2026); validate ở tầng ứng dụng, không CHECK (US-025 GĐ3)']
  label text [not null]
  title text [not null]
  desc text [not null]
  updatedAt timestamp [not null]

  note: 'Roadmap timeline sửa được qua Config Panel. Seed lười từ lib/roadmap-defaults.ts khi bảng rỗng.'

  indexes {
    order
  }
}

Table RoadmapDeliverable {
  id text [pk]
  phaseId text [not null, ref: > RoadmapPhase.id]
  order integer [not null, default: 0]
  title text [not null]
  desc text [not null]

  note: 'Đầu ra của một giai đoạn roadmap. onDelete Cascade theo RoadmapPhase.'

  indexes {
    (phaseId, order)
  }
}

Table TimetableRow {
  id text [pk]
  order integer [not null, default: 0]
  timeLabel text [not null]
  mon text [not null]
  tue text [not null]
  wed text [not null]
  thu text [not null]
  fri text [not null]
  sat text [not null]
  sun text [not null]
  updatedAt timestamp [not null]

  note: 'Bảng lịch tuần sửa được qua Config Panel. Mỗi dòng = 1 khung giờ + 7 ô ngày. Seed lười từ lib/timetable-defaults.ts.'

  indexes {
    order
  }
}

Table PageText {
  id text [pk]
  page text [not null, note: 'Khoá ổn định do app đặt = route rút gọn, vd "roadmap/priorities"']
  key text [not null, note: 'Tên trường text trong trang, vd "ratio.title", "scorecard.desc"']
  value text [not null]
  updatedAt timestamp [not null]

  note: 'Từng trường text đơn lẻ của trang Roadmap/Freelance/Sản phẩm (US-027) — tiêu đề Card, mô tả, số liệu lớn... Sửa qua nút "Chỉnh sửa trang", không cần đổi code. Mặc định: lib/page-content-defaults.ts.'

  indexes {
    page
    (page, key) [unique]
  }
}

Table PageBlock {
  id text [pk]
  page text [not null]
  section text [not null, default: 'default', note: 'Phân nhóm khi 1 trang có nhiều danh sách khác nhau, vd "topics" và "services"']
  order integer [not null, default: 0]
  badge text [note: 'Nhãn ngắn đầu item — số thứ tự, mã gói...']
  title text
  desc text
  value text [note: 'Số liệu hiển thị lớn (percent, con số KPI...)']
  weight integer [note: 'Độ dài thanh Progress khi item có biểu diễn %']
  variant text [note: 'Biến thể màu/kiểu hiển thị (progress-warn, progress-success...)']
  bullets text [note: 'Mảng chuỗi JSON-encode cho gạch đầu dòng con — SQLite không có kiểu mảng gốc']
  updatedAt timestamp [not null]

  note: 'Danh sách item lặp lại trong trang Roadmap/Freelance/Sản phẩm (US-027) — thẻ ưu tiên, mục tiêu, dịch vụ... Mặc định: lib/page-content-defaults.ts.'

  indexes {
    (page, section, order)
  }
}

Table JobPlatform {
  id text [pk]
  name text [not null, note: 'Không ràng buộc trùng — Dylan tự thêm/xóa option (US-018)']
  createdAt timestamp [not null]

  note: '3 option mặc định ("ITViec", "LinkedIn", "VietNamWork") được tạo lười bởi tầng ứng dụng khi bảng rỗng, không phải seed migration (JDG-023)'
}

Table JobApplication {
  id text [pk]
  company text [not null]
  deadline timestamp [note: 'Không bắt buộc — job không có Ngày hết hạn thì để trống, không bị luật BR-025 tự chuyển "Expired" (DEC-119)']
  platformId text [not null, ref: > JobPlatform.id]
  link text [not null, note: 'Phải bắt đầu http:// hoặc https:// — ràng buộc ở tầng ứng dụng (DEC-086)']
  status text [not null, default: 'Interested', note: 'Chỉ 1 trong 8 giá trị: Interested | Waiting | No Response | Response | Appointment | Cancel | Fail | Expired — ràng buộc ở tầng ứng dụng, không phải CHECK constraint của DB (DEC-084, DEC-087, DEC-101, DEC-102)']
  note text
  submittedAt timestamp [note: '"Ngày nộp hồ sơ" — ghi khi chuyển Interested → Waiting, xoá khi chuyển ngược Waiting → Interested (BR-027, DEC-099, DEC-103); mốc để tính luật "quá 7 ngày → No Response" (BR-026)']
  owner text [not null, default: 'me', note: 'Chỉ 1 trong 2 giá trị: me | olivia — tách job theo người dùng ở tab Job Tracker, ràng buộc ở tầng ứng dụng, không phải CHECK constraint của DB (theo mẫu status)']
  createdAt timestamp [not null]
  updatedAt timestamp [not null]

  note: 'Độc lập với MonthBudget/Category/Transaction — trang Roadmap, ngoài phạm vi Hệ Thống Quản Lý Chi Tiêu (DEC-088)'

  indexes {
    platformId
    owner
  }
}
